# magic-gci-bot

./: Cargo.toml  LICENSE  README.md  config.example.toml
src/: api.rs  config.rs  gci.rs  main.rs  recognition.rs  state.rs  transmission.rs
src/api/: openai.rs  srs.rs  tacview.rs
