[package]
name = "magic-gci-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
audiopus = "0.2.0"
clap = { version = "4.4.8", features = ["derive"] }
futures-channel = "0.3.29"
futures-util = { version = "0.3.29", features = ["sink"] }
ogg = "0.9.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "json",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
srs = { git = "https://github.com/pbzweihander/DATIS.git", rev = "c7056bfa4dc854e76cdb3ceb79a0fed861087a54", version = "3.1.2" }
stopper = "0.2.2"
tacview-realtime-client = { git = "https://github.com/pbzweihander/tacview-realtime-client-rs.git", rev = "59e0d8421875dadb2e6720d29c9175127f01ef66", version = "0.1.0" }
tokio = { version = "1.34.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
wav = "1.0.0"
